# tentags

./: .gitignore  CHANGELOG.md  EXAMPLES.md  LICENSE  MANIFEST.in  README.md  TENTAGS_LLM_BOOTSTRAP_PROMPT.md  pyproject.toml  requirements.txt  sample_financial_report_9x5.csv  sample_multitable_data.csv  tentags.py  test_data.csv  test_django.py  test_html.py  test_jinja.py  test_library.py  test_metadata_features.py  test_multitable.py
tentags/: TENTAGS_LLM_BOOTSTRAP_PROMPT.md  __init__.py
tentags/addressing/: __init__.py  address.py  errors.py  location.py  mark.py  parser.py  range.py  resolver.py  utils.py
tentags/contrib/: __init__.py  django.py  fastapi.py  flask.py  jinja.py
tentags/templatetags/: __init__.py  tentags.py
test/: demo_paths.py  test_addressing.py  test_all_tags.py  test_border_styles.py  test_django.py  test_external_address_resolver.py  test_html.py  test_html_demo.py  test_html_goto_links.py  test_html_table.py  test_img.py  test_library.py  test_llm_code.py  test_mark_goto.py  test_merge_content_preservation.py  test_metadata_features.py  test_multitable.py  test_multitable_addressing.py  test_multitable_demo.py  test_multitable_navigation_serializer.py  test_pdf_code.py  test_pdf_financial_report_9x5.py  test_pdf_goto_links.py  test_scale.py  test_serializer_api.py  test_serializer_db_examples.py  test_split.py  test_template_concept.py  test_value_refs.py  test_xlsx_code.py  test_xlsx_goto_links.py
