[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tentags"
version = "0.1.4"
description = "A lightweight declarative document markup language and DSL focused on high-fidelity tables and spreadsheet grids."
readme = "README.md"
authors = [
    { name = "Zhandos Mambetali", email = "zhandos.mambetali@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
keywords = ["html", "excel", "xlsx", "table", "generator", "spreadsheet", "pycells", "tags", "parser"]
dependencies = []
requires-python = ">=3.8"

[project.optional-dependencies]
excel = [
    "openpyxl>=3.1.0",
    "et_xmlfile>=2.0.0"
]
dev = [
    "openpyxl>=3.1.0",
    "et_xmlfile>=2.0.0",
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0"
]

[project.urls]
Homepage = "https://pycells.com"
Documentation = "https://pycells.com/tentags"
Repository = "https://github.com/Jandos77/tentags"
Issues = "https://github.com/Jandos77/tentags/issues"

[tool.setuptools]
py-modules = ["tentags"]
