[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tentags"
version = "0.1.8"
description = "A declarative template language and Intermediate Representation (IR) for automated HTML, Excel, and PDF table/document generation."
readme = "README.md"
authors = [
    { name = "Zhandos Mambetali", email = "zhandos.mambetali@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
keywords = ["html", "excel", "xlsx", "table", "generator", "spreadsheet", "pycells", "tags", "parser"]
dependencies = []
requires-python = ">=3.8"

[project.optional-dependencies]
excel = [
    "openpyxl>=3.1.0",
    "et_xmlfile>=2.0.0"
]
pdf = [
    "reportlab>=4.0.0"
]
all = [
    "openpyxl>=3.1.0",
    "et_xmlfile>=2.0.0",
    "reportlab>=4.0.0"
]
dev = [
    "openpyxl>=3.1.0",
    "et_xmlfile>=2.0.0",
    "reportlab>=4.0.0",
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0"
]

[project.urls]
Homepage = "https://tentags.org"
Documentation = "https://tentags.org"
Repository = "https://github.com/Jandos77/tentags"
Issues = "https://github.com/Jandos77/tentags/issues"

[tool.setuptools]
py-modules = ["tentags"]
